<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sign_up_bg"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/MySplashTitleTextStyle"
                android:text="@string/create_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/nameEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_account"
                android:hint="@string/name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <EditText
                android:id="@+id/phoneEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/phone"
                android:maxLength="11"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <EditText
                android:id="@+id/emailEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <EditText
                android:id="@+id/instituteEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_institute"
                android:hint="@string/institute"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
<!--            <EditText-->
<!--                android:id="@+id/classEditText"-->
<!--                style="@style/MyEditTextStyle"-->
<!--                android:drawableStart="@drawable/ic_class"-->
<!--                android:hint="@string/class_name"-->
<!--                android:inputType="text"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/_45sdp"/>-->
            <habibur.rahman.spark.tuition.ui.custom.DropDownView
                android:id="@+id/classEditText"
                style="@style/MyEditTextStyle"
                android:text="@string/input_class_name"
                android:textSize="@dimen/_15ssp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_class"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <EditText
                android:id="@+id/passwordEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <EditText
                android:id="@+id/confirmPasswordEditText"
                style="@style/MyEditTextStyle"
                android:drawableStart="@drawable/ic_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/termsAndConditionCheckBox"
                    android:textColor="@color/white"
                    android:buttonTint="@color/white"
                    android:layout_centerVertical="true"
                    android:text="@string/agree_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/termsAndConditionTextView"
                    style="@style/MySmallTextStyle"
                    android:layout_centerVertical="true"
                    android:textStyle="italic|bold"
                    android:text="@string/terms_and_condition"
                    android:layout_toEndOf="@+id/termsAndConditionCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
            <Button
                android:id="@+id/signUpButton"
                style="@style/MyButtonStyle"
                android:background="@drawable/button_background"
                android:textColor="@color/splash_title_text_color"
                android:text="@string/sign_up"
                android:paddingStart="@dimen/_45sdp"
                android:paddingEnd="@dimen/_45sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/orTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/white"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"/>
                <TextView
                    android:id="@+id/orTextView"
                    style="@style/MySplashTitleTextStyle"
                    android:layout_marginTop="0dp"
                    android:text="@string/or"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/orTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/white"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_1sdp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/haveAnAccountTextView"
                style="@style/MySmallTextStyle"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/registrationSpinKit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/red" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>