<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lock_bg"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">
    <LinearLayout
        android:background="@color/purple_10"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:src="@drawable/search_password"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_80sdp"/>
        <TextView
            style="@style/MySplashTitleTextStyle"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/MyNormalTextStyle"
            android:gravity="center"
            android:text="@string/do_not_worry_we_just"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/forgotPasswordEmailEditText"
            style="@style/MyEditTextStyle"
            android:layout_marginTop="@dimen/_15sdp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/provide_registered_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>
        <Button
            android:id="@+id/forgotPasswordButton"
            style="@style/MyButtonStyle"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"/>
    </LinearLayout>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/forgotPasswordSpinKit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/red" />
</androidx.constraintlayout.widget.ConstraintLayout>