<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/sign_in_bg"
    android:padding="@dimen/_10sdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sparkTextViewId"
                android:layout_marginEnd="@dimen/_25sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/spark"
                android:textColor="@color/white"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                android:fontFamily="@font/copper_std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/bookImageViewId"
                app:layout_constraintTop_toTopOf="@+id/sparkTextViewId"
                app:layout_constraintBottom_toBottomOf="@+id/sparkTextViewId"
                app:layout_constraintStart_toEndOf="@+id/sparkTextViewId"
                android:src="@drawable/education_icon"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
            <TextView
                android:text="@string/tuition"
                app:layout_constraintStart_toStartOf="@+id/sparkTextViewId"
                app:layout_constraintEnd_toEndOf="@+id/bookImageViewId"
                app:layout_constraintTop_toBottomOf="@+id/sparkTextViewId"
                android:textColor="@color/white"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold"
                android:fontFamily="@font/copper_std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <EditText
            android:id="@+id/emailEditText"
            style="@style/MyEditTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>
        <EditText
            android:id="@+id/passwordEditText"
            style="@style/MyEditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>
        <TextView
            android:id="@+id/forgotPasswordTextView"
            style="@style/MyNormalTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/signInButton"
            style="@style/MyButtonStyle"
            android:background="@drawable/white_button_bg_with_shadow"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="center"
            android:textColor="@color/splash_title_text_color"
            android:text="@string/sign_in"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.45"
            android:layout_height="@dimen/_40sdp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/signInDivider"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/orTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/white"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"/>
            <TextView
                android:id="@+id/orTextView"
                style="@style/MySplashTitleTextStyle"
                android:layout_marginTop="0dp"
                android:text="@string/or"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/orTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/white"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/doNotHaveAccountTextView"
            style="@style/MySmallTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/signInDivider"
            android:gravity="center"
            android:text="@string/do_not_have_an_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loginSpinKit"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/red" />
</androidx.constraintlayout.widget.ConstraintLayout>